--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -71,6 +71,14 @@
   display: flex;
 }
 
+.govuk__flex-stack {
+  display: flex;
+  flex-direction: column;
+  @media screen and (min-width: 641px) {
+    flex-direction: row;
+  }
+}
+
 .govuk__align-items-unset {
   align-items: unset;
 }
