updates workplace search for conditional render of search

--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div *ngIf="totalWorkplaceCount; else noWorkplaces">
-  <div class="govuk-grid-row govuk-!-margin-bottom-5">
+  <div *ngIf="totalWorkplaceCount > itemsPerPage" class="govuk-grid-row govuk-!-margin-bottom-5">
     <div class="govuk-grid-column-three-quarters">
       <app-search-input accessibleLabel="child workplace records" (emitInput)="handleSearch($event)"></app-search-input>
     </div>
