--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -1,15 +1,13 @@
 <div class="govuk-form-group govuk-!-margin-bottom-6">
   <div
     [ngClass]="
-      workerCount > itemsPerPage
-        ? 'govuk-grid-row'
-        : 'govuk__flex-stack govuk__align-items-flex-end govuk__justify-content-end'
+      showSearchBar ? 'govuk-grid-row' : 'govuk__flex-stack govuk__align-items-flex-end govuk__justify-content-end'
     "
   >
     <div
       *ngIf="showViewByToggle"
       [ngClass]="
-        workerCount > itemsPerPage
+        showSearchBar
           ? 'govuk-grid-column-full govuk-!-margin-bottom-4 govuk-!-margin-top-4'
           : 'govuk-grid-column-three-quarters govuk-!-padding-0 govuk-!-padding-bottom-3'
       "
@@ -26,11 +24,12 @@
       </a>
     </div>
 
-    <div *ngIf="workerCount > itemsPerPage" class="govuk-grid-column-three-quarters">
+    <div *ngIf="showSearchBar" class="govuk-grid-column-three-quarters">
       <app-search-input accessibleLabel="staff training records" (emitInput)="handleSearch($event)"></app-search-input>
     </div>
     <div
-      class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
+      class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
+      [ngClass]="showSearchBar ? '' : 'govuk-!-padding-0'"
     >
       <label class="govuk-label" for="sortByTrainingStaff"> Sort by </label>
       <select
