--- a/src/app/features/admin/registration-requests/pending-registration-requests/pending-registration-requests.component.html
+++ b/src/app/features/admin/registration-requests/pending-registration-requests/pending-registration-requests.component.html
@@ -5,6 +5,7 @@
         <th scope="col" class="govuk-table__header">Workplace</th>
         <th scope="col" class="govuk-table__header">Postcode</th>
         <th scope="col" class="govuk-table__header">Parent ID</th>
+        <th scope="col" class="govuk-table__header">Regulated</th>
         <th scope="col" class="govuk-table__header">Received</th>
         <th scope="col" class="govuk-table__header">Status</th>
       </tr>
@@ -26,6 +27,7 @@
             {{ registration.parentEstablishmentId }}
           </a>
         </td>
+        <td class="govuk-table__cell">{{ registration.isRegulated ? 'Yes' : 'No' }}</td>
         <td class="govuk-table__cell">
           {{ registration.created | date: 'dd MMM yyyy HH:mm' }}
         </td>
