feat(targetedEmailsFileUpload): Create basic drag-and-drop-upload component

--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -35,7 +35,7 @@
 </div>
 <div *ngIf="showDragAndDrop" data-testid="dragAndDrop" class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <p>Drag and drop</p>
+    <app-drag-and-drop-upload></app-drag-and-drop-upload>
   </div>
 </div>
 <div class="govuk-grid-row">
