--- a/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
+++ b/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
@@ -15,6 +15,7 @@
       id="drag-and-drop"
       (change)="onSelect($event)"
       [maxFileSize]="20000000"
+      [multiple]="false"
       accept=".csv"
       disableClick="true"
       class="govuk-drag-and-drop"
