updates error messaging and test for multiple file upload attempt

--- a/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
+++ b/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
@@ -1,6 +1,6 @@
 <app-validation-error-message
-  *ngIf="showInvalidFileError"
-  [errorMessage]="'You can only upload CSV files.'"
+  *ngIf="invalidFileErrorMessage"
+  [errorMessage]="invalidFileErrorMessage"
 ></app-validation-error-message>
 <form #formEl novalidate [formGroup]="form" id="server-error">
   <div
