adds aria label to drop zone for easier unit testing

--- a/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
+++ b/src/app/features/admin/emails/drag-and-drop-upload/drag-and-drop-upload.component.html
@@ -20,6 +20,7 @@
       disableClick="true"
       class="govuk-drag-and-drop"
       #drop
+      aria-label="upload files here"
     >
       <span class="govuk-body">Drag and drop your CSV files here or </span>
       <button
