adds search back link functionality on workpalces

--- a/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
+++ b/src/app/features/workplace/view-my-workplaces/view-my-workplaces.component.html
@@ -21,7 +21,11 @@
 <div *ngIf="totalWorkplaceCount; else noWorkplaces">
   <div *ngIf="totalWorkplaceCount > itemsPerPage" class="govuk-grid-row govuk-!-margin-bottom-5">
     <div class="govuk-grid-column-three-quarters">
-      <app-search-input accessibleLabel="child workplace records" (emitInput)="handleSearch($event)"></app-search-input>
+      <app-search-input
+        accessibleLabel="child workplace records"
+        [prevSearch]="searchTerm"
+        (emitInput)="handleSearch($event)"
+      ></app-search-input>
     </div>
   </div>
 
