--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -3,6 +3,7 @@
     <app-search-input
       ref="trainingRecordSearch"
       accessibleLabel="for staff records"
+      [prevSearch]="searchTerm"
       (emitInput)="handleSearch($event)"
     ></app-search-input>
   </div>
@@ -36,7 +37,7 @@
     <tr class="govuk-table__row" *ngFor="let worker of paginatedWorkers">
       <td class="govuk-table__cell govuk-!-font-weight-regular">
         <ng-container *ngIf="canViewWorker; else nameOrId">
-          <a [routerLink]="getWorkerRecordPath(worker)">
+          <a href="#" (click)="getWorkerRecordPath($event, worker)">
             {{ worker.nameOrId }}
           </a>
         </ng-container>
