--- a/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
+++ b/src/app/shared/components/training-and-qualifications-summary/training-and-qualifications-summary.component.html
@@ -25,7 +25,11 @@
     </div>
 
     <div *ngIf="showSearchBar" class="govuk-grid-column-three-quarters">
-      <app-search-input accessibleLabel="staff training records" (emitInput)="handleSearch($event)"></app-search-input>
+      <app-search-input
+        accessibleLabel="staff training records"
+        [prevSearch]="searchTerm"
+        (emitInput)="handleSearch($event)"
+      ></app-search-input>
     </div>
     <div
       class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
