--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -52,7 +52,7 @@
         </ng-container>
       </ul>
       <ul class="govuk-header__navigation" id="navigation2" aria-label="Top Level Navigation">
-        <ng-container *ngIf="isAdminUser() && isLoggedIn() && !isOnAdminScreen">
+        <ng-container *ngIf="isAdminUser && isLoggedIn() && !isOnAdminScreen">
           <li class="govuk-header__navigation-item">
             <a [routerLink]="['/sfcadmin']" class="govuk-link">Back to admin</a>
           </li>
