--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -41,6 +41,7 @@ body {
 @import 'components/tabs';
 @import 'components/tag';
 @import 'components/notifications';
+@import 'components/drag-and-drop';
 
 // CMS
 @import 'cms/cms';
