renames css class

--- a/src/app/shared/components/summary-list/summary-list.component.html
+++ b/src/app/shared/components/summary-list/summary-list.component.html
@@ -23,8 +23,8 @@
       </dd>
     </ng-container>
     <ng-template #nonPassword>
-      <dd class="govuk-summary-list__value govuk__preline">
-        <span>{{ item.data }}</span>
+      <dd class="govuk-summary-list__value asc__preline">
+        {{ item.data }}
       </dd>
     </ng-template>
     <ng-container *ngIf="item.route">
