--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -98,10 +98,6 @@
   justify-content: flex-end;
 }
 
-.govuk__preline {
-  white-space: pre-line;
-}
-
 .govuk__nowrap {
   white-space: nowrap;
 }
@@ -125,4 +121,8 @@
 .asc-icon-align {
   position: relative;
   top: 4px;
+}
+
+.asc__preline {
+  white-space: pre-line;
 }
