Add button and number of inactive workplaces to be deleted Co-authored-by: Alex Pope <popey2700@users.noreply.github.com>

--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.scss
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.scss
@@ -3,3 +3,7 @@
   background-color: govuk-colour('light-grey');
   padding: 20px 40px;
 }
+
+#sendInactiveWorkplaceButton {
+  white-space: nowrap;
+}
