refactors password validation to use constant and updates error messages on client

--- a/src/app/features/create-account/user/username-password/username-password.component.html
+++ b/src/app/features/create-account/user/username-password/username-password.component.html
@@ -37,7 +37,8 @@
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && getPassword.errors">
             <label class="govuk-label" for="createPasswordInput"> Password </label>
             <span id="createPasswordInput-hint" class="govuk-hint">
-              Must be at least 8 characters long and have uppercase letters, lowercase letters and numbers.
+              Must be at least 8 characters long and have uppercase letters, lowercase letters, numbers and special
+              characters like !, £.
             </span>
             <span
               *ngIf="submitted && getPassword.errors"
