Add confirm delete dialogue box(WIP)

--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
@@ -54,7 +54,7 @@
           <button
             class="govuk-button govuk-button--warning govuk-!-margin-right-9"
             [disabled]="!inactiveWorkplaces"
-            (click)="confirmSendEmails($event, inactiveWorkplaces)"
+            (click)="confirmDeleteInactiveAccounts($event, inactiveWorkplaces)"
             type="submit"
           >
             Delete Inactive accounts
