--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
@@ -12,10 +12,10 @@
       </div>
 
       <div class="govuk-grid-column-one-half">
-        <p class="asc-summary-box govuk-!-margin-bottom-12" data-testid="inactiveWorkplacesToEmail">
-          <span>Number of inactive workplaces to email:</span>
+        <p class="asc-summary-box govuk-!-margin-bottom-12" data-testid="inactiveWorkplacesToDelete">
+          <span>Number of inactive workplaces to delete:</span>
           <br />
-          <strong class="govuk-!-font-size-36" data-testid="inactiveWorkplaces">1</strong>
+          <strong class="govuk-!-font-size-36" data-testid="inactiveWorkplacesToDelete">1</strong>
         </p>
       </div>
     </div>
