--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
@@ -15,7 +15,9 @@
         <p class="asc-summary-box govuk-!-margin-bottom-12" data-testid="inactiveWorkplacesToDelete">
           <span>Number of inactive workplaces to delete:</span>
           <br />
-          <strong class="govuk-!-font-size-36" data-testid="inactiveWorkplacesToDelete">1</strong>
+          <strong class="govuk-!-font-size-36" data-testid="inactiveWorkplacesToDelete">
+            {{ inactiveWorkplacesforDeletion | number }}</strong
+          >
         </p>
       </div>
     </div>
