add number of inactive workplaces to the delete dialogue box Co-authored-by: Alex Pope <popey2700@users.noreply.github.com>

--- a/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
+++ b/src/app/features/admin/emails/inactive-emails/inactive-emails.component.html
@@ -55,8 +55,8 @@
         <div class="govuk-!-margin-top-6">
           <button
             class="govuk-button govuk-button--warning govuk-!-margin-right-9"
-            [disabled]="!inactiveWorkplaces"
-            (click)="confirmDeleteInactiveAccounts($event, inactiveWorkplaces)"
+            [disabled]="!inactiveWorkplacesforDeletion"
+            (click)="confirmDeleteInactiveAccounts($event, inactiveWorkplacesforDeletion)"
             type="submit"
           >
             Delete Inactive accounts
