--- a/src/app/core/components/error/cannot-create-account/cannot-create-account.component.html
+++ b/src/app/core/components/error/cannot-create-account/cannot-create-account.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-l">We cannot create an account for you at the moment</h1>
-    <p>
+    <h1 class="govuk-heading-l" data-testid="heading">We cannot create an account for you at the moment</h1>
+    <p data-testid="firstParagraph">
       Please call ASC-WDS Support Team on <strong>0113 241 0969</strong> and tell that you're trying to create an
       account.
     </p>
