--- a/src/app/features/admin/emails/dialogs/confirm-inactive-workplace-deletion/confirm-inactive-workplace-deletion.html
+++ b/src/app/features/admin/emails/dialogs/confirm-inactive-workplace-deletion/confirm-inactive-workplace-deletion.html
@@ -1,7 +1,5 @@
 <div class="govuk-!-padding-3">
-  <h1 id="dialogHeading">
-    You're about to delete <strong>{{ data.numberOfInactiveWorkplacesForDeletion }} </strong> inactive accounts
-  </h1>
+  <h1 id="dialogHeading">{{revealTitle}}</h1>
 </div>
 
 <button (click)="close(true)" class="govuk-button govuk-button--warning">Delete inactive accounts</button>
