add an initial call to worker resolver to bring back all workers to get the training and quals count, add to training and quals tab, alter view-workplace and dashboard components

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -33,6 +33,7 @@
           [workplace]="workplace"
           [workers]="workers"
           [workerCount]="workerCount"
+          [trainingCounts]="trainingCounts"
         ></app-training-and-qualifications-tab>
       </app-tab>
 
