--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Admin</h1>
+    <h1 class="govuk-heading-l" data-cy="admin-heading">Admin</h1>
   </div>
 </div>
 <div class="govuk-grid-row">
