--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -9,7 +9,7 @@
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      <h1 class="govuk-fieldset__heading">Sign in</h1>
+      <h1 class="govuk-fieldset__heading" data-cy="signin-heading">Sign in</h1>
     </legend>
 
     <div
@@ -17,10 +17,17 @@
       [class.govuk-form-group--error]="(form.get('username').errors || serverError) && submitted"
     >
       <label class="govuk-label" for="username"> Username </label>
-      <span id="username-error" class="govuk-error-message" *ngIf="form.get('username').errors && submitted">
-        <span class="govuk-visually-hidden">Error:</span> {{ getFormErrorMessage('username', 'required') }}
+      <span
+        id="username-error"
+        class="govuk-error-message"
+        *ngIf="form.get('username').errors && submitted"
+        data-cy="username-error"
+      >
+        <span class="govuk-visually-hidden">Error:</span>
+        {{ getFormErrorMessage('username', 'required') }}
       </span>
       <input
+        data-cy="username"
         class="govuk-input govuk-input--width-20"
         [class.govuk-input--error]="(form.get('username').errors || serverError) && submitted"
         id="username"
@@ -35,10 +42,16 @@
       [class.govuk-form-group--error]="(form.get('password').errors || serverError) && submitted"
     >
       <label class="govuk-label" for="password"> Password </label>
-      <span id="password-error" class="govuk-error-message" *ngIf="form.get('password').errors && submitted">
+      <span
+        id="password-error"
+        class="govuk-error-message"
+        *ngIf="form.get('password').errors && submitted"
+        data-cy="password-error"
+      >
         <span class="govuk-visually-hidden">Error:</span> {{ getFormErrorMessage('password', 'required') }}
       </span>
       <input
+        data-cy="password"
         class="govuk-input govuk-input--width-20"
         [class.govuk-input--error]="(form.get('password').errors || serverError) && submitted"
         id="password"
