--- a/src/app/shared/components/error-summary/error-summary.component.html
+++ b/src/app/shared/components/error-summary/error-summary.component.html
@@ -4,22 +4,22 @@
   role="alert"
   tabindex="-1"
   data-module="error-summary"
+  data-cy="error-summary"
   #errorSummary
 >
-  <h2 class="govuk-error-summary__title" id="error-summary-title">
-    There is a problem
-  </h2>
+  <h2 class="govuk-error-summary__title" id="error-summary-title">There is a problem</h2>
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <ng-container *ngIf="errors">
-        <ng-container *ngIf="getCurrentRoute(); let currentRoute;">
-          <li *ngFor="let i of errors">
+        <ng-container *ngIf="getCurrentRoute(); let currentRoute">
+          <li *ngFor="let i of errors; let index = index">
             <a
               (click)="focusOnField(i.item)"
               [routerLink]="currentRoute"
               [fragment]="getErrorId(i.item)"
               [queryParamsHandling]="'merge'"
               [innerHTML]="getFormErrorMessage(i.item, i.errors[0])"
+              [attr.data-cy]="'error-' + index"
             >
             </a>
           </li>
