--- a/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
+++ b/src/app/features/admin/emails/targeted-emails/targeted-emails.component.html
@@ -42,7 +42,8 @@
       class="govuk-list govuk-list--inline govuk__flex govuk-!-margin-top-5"
       role="button"
       draggable="false"
-      href="/download/{{ now | date: 'yyyy-MM-dd' }}-targeted-emails-report.xls"
+      href="#"
+      (click)="downloadTargetedEmailsReport($event)"
     >
       <img alt="" src="/assets/images/icon-download.svg" /><span class="govuk-!-margin-left-1">
         Download targeted emails report
