add tests, sort out other employer type drop down not showing

--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -33,7 +33,7 @@
               </div>
 
               <div
-                *ngIf="answer === 'Other'"
+                *ngIf="option.value === 'Other'"
                 class="govuk-radios__conditional"
                 [class.govuk-radios__conditional--hidden]="form.get('employerType').value !== 'Other'"
                 id="conditional-employerType-conditional-1"
