--- a/src/app/features/dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/dashboard/home-tab/home-tab.component.html
@@ -1,15 +1,11 @@
 <div class="govuk-grid-row govuk-!-margin-top-3">
   <div class="govuk-grid-column-two-thirds">
     <ng-container *ngIf="workplace && canEditEstablishment">
-      <p *ngIf="!workplace.employerType">What you need to do first.</p>
       <app-inset-text *ngIf="!workplace.employerType" [color]="'todo'">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
-            <a
-              *ngIf="!workplace?.employerType"
-              [routerLink]="['/workplace', workplace?.uid, 'start']"
-              data-testid="add-workplace-info"
-              >Add workplace information</a
+            <a *ngIf="!workplace?.employerType" [routerLink]="['/workplace', workplace?.uid, 'start']"
+              >Start to add more details about your workplace</a
             >
           </div>
         </div>
