--- a/src/app/features/dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/dashboard/home-tab/home-tab.component.html
@@ -4,9 +4,7 @@
       <app-inset-text *ngIf="!workplace.employerType" [color]="'todo'">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
-            <a *ngIf="!workplace?.employerType" [routerLink]="['/workplace', workplace?.uid, 'start']"
-              >Start to add more details about your workplace</a
-            >
+            <a [routerLink]="['/workplace', workplace?.uid, 'start']">Start to add more details about your workplace</a>
           </div>
         </div>
       </app-inset-text>
