--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-xl">Add your workplace information</h1>
+    <h1 class="govuk-heading-xl">Add more details about your workplace</h1>
     <p>
       To complete your workplace you need to give us some more information. This includes information about your new
       starters and staff who have left in the last 12 months. We would also like to know about your current vacancies.
@@ -11,13 +11,9 @@
       [routerLink]="['/workplace', establishment.uid, 'type-of-employer']"
       role="button"
       draggable="false"
-      class="govuk-button govuk-button--start"
+      class="govuk-button"
     >
-      Start now
-
-      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-      </svg>
+      Continue
     </a>
   </div>
 </div>
