start component, added tests and amended title/button text

--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -1,17 +1,21 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-xl">Add more details about your workplace</h1>
-    <p>
-      To complete your workplace you need to give us some more information. This includes information about your new
-      starters and staff who have left in the last 12 months. We would also like to know about your current vacancies.
-    </p>
-
-    <p>Once you have added it you can change this information at any time from the workplace tab.</p>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Add more details about your workplace</h1>
+    <p>We would like to know:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>what type of employer you are (for example, local authority)</li>
+      <li>whether you provide any other services</li>
+      <li>the capacity of the services that you provide</li>
+      <li>who uses your service</li>
+      <li>whether we can share your data</li>
+      <li>whether you have any current staff vacancies</li>
+      <li>whether you've had new starters or leavers in the last 12 months</li>
+    </ul>
     <a
       [routerLink]="['/workplace', establishment.uid, 'type-of-employer']"
       role="button"
       draggable="false"
-      class="govuk-button"
+      class="govuk-button govuk-!-margin-top-5"
     >
       Continue
     </a>
