Amended title on service user component

--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -10,8 +10,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <h1 class="govuk-fieldset__heading">Who uses your service?</h1>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">Who are your service users?</h1>
         </legend>
         <p>Select all that apply.</p>
         <div class="govuk-form-group" *ngFor="let group of serviceUserGroups">
