feat(workplaceDetailsCapacityOfServicesTextChanges): Change services capacity title (size and text) and message

--- a/src/app/features/workplace/services-capacity/services-capacity.component.html
+++ b/src/app/features/workplace/services-capacity/services-capacity.component.html
@@ -9,12 +9,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <h1 class="govuk-fieldset__heading">Capacity of your services</h1>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">What's the capacity of your services?</h1>
         </legend>
         <p>
-          You've told us about the services your workplace provides. We need to know what the capacity of these services
-          is.
+          You've told us about the services your workplace provides. Now we need to know the capacity of these services.
         </p>
 
         <ng-container *ngFor="let capacity of capacities; let i = index">
