write test files around the submit buttons for each component in add staff flow

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -114,11 +114,11 @@
     </div>
   </div>
   <app-submit-button
-    [return]="canReturn"
+    [return]="return"
     [canExit]="canExit"
     [exitText]="exitText"
     [recordSummary]="false"
-    [callToAction]="this.submitTitle"
+    [callToAction]="submitTitle"
     [isExistingStaffRecord]="!!worker"
     (clicked)="onSubmit($event)"
   ></app-submit-button>
