--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -11,7 +11,7 @@
         >View {{ isExistingStaffRecord ? 'this staff record' : 'record summary' }}</a
       >
     </div>
-    <div *ngIf="this.canExit && !isExistingStaffRecord" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
+    <div *ngIf="canExit && !isExistingStaffRecord" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
       <span class="govuk-visually-hidden">or</span>
       <a class="govuk-button govuk-button--link" (click)="onClick($event, 'exit', false)">{{ exitText }}</a>
     </div>
