--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -114,7 +114,7 @@
     </div>
   </div>
   <app-submit-button
-    [return]="return"
+    [return]="canReturn"
     [canExit]="canExit"
     [exitText]="exitText"
     [recordSummary]="false"
