--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -10,7 +10,7 @@
 
   <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
 
-  <a class="govuk-button" role="button" draggable="false" [routerLink]="['/workplace', establishment.uid, 'success']">
+  <a class="govuk-button" role="button" draggable="false" [routerLink]="['/dashboard']" [fragment]="'workplace'">
     Save and complete
   </a>
 </ng-container>
