--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -1,24 +1,24 @@
 <ng-container *ngIf="establishment">
-  <h1 class="govuk-heading-l" data-testid="establishmentHeading">
-    <span class="govuk-caption-l">Workplace summary</span>
-    {{ establishment.name }}
-  </h1>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <p class="govuk-!-margin-top-2 govuk-!-margin-bottom-8">
-        Check the workplace details you've added before you confirm them.
-      </p>
-    </div>
-    <div class="govuk-grid-column-one-third">
-      <a
-        class="govuk-button govuk-util__float-right"
-        role="button"
-        draggable="false"
-        [routerLink]="['/workplace', establishment.uid, 'success']"
-      >
-        Confirm workplace details
-      </a>
+    <div class="govuk-grid-column-full">
+      <h1 class="govuk-heading-l" data-testid="establishmentHeading">
+        <span class="govuk-caption-l">Workplace summary</span>
+        {{ establishment.name }}
+      </h1>
+
+      <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
+        <p>Check the workplace details you've added before you confirm them.</p>
+        <a
+          class="govuk-button"
+          role="button"
+          draggable="false"
+          [routerLink]="['/workplace', establishment.uid, 'success']"
+        >
+          Confirm workplace details
+        </a>
+      </div>
+
+      <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
     </div>
   </div>
-  <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
 </ng-container>
