--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -8,21 +8,12 @@
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
         <p>Check the workplace details you've added before you confirm them.</p>
-        <a
-          class="govuk-button"
-          role="button"
-          draggable="false"
-          [routerLink]="['/workplace', establishment.uid, 'success']"
-        >
+        <a class="govuk-button" role="button" draggable="false" (click)="showConfirmWorkplaceDetailsAlert($event)">
           Confirm workplace details
         </a>
       </div>
 
       <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
-
-      <a class="govuk-button" role="button" draggable="false" (click)="showConfirmWorkplaceDetailsAlert()">
-        Save and complete
-      </a>
     </div>
   </div>
 </ng-container>
