--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -8,7 +8,7 @@
     <div *ngIf="recordSummary" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
       <span class="govuk-visually-hidden">or</span>
       <a class="govuk-button govuk-button--link" (click)="onClick($event, 'summary', false)"
-        >View {{ isExistingStaffRecord ? 'this staff record' : 'record summary' }}</a
+        >View {{ isExistingStaffRecord ? 'this staff record' : 'workplace details' }}</a
       >
     </div>
     <div *ngIf="this.canExit && !isExistingStaffRecord" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
