added line break and amended casing on totals

--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-9">
+          <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
             Add your staff leavers from the last 12 months
           </h1>
           <p class="govuk-hint">These should only be leavers who are permanent or temporary staff.</p>
@@ -82,6 +82,7 @@
             >
           </div>
         </div>
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-bottom-7" />
       </div>
     </ng-container>
     <div class="govuk-grid-row">
@@ -96,7 +97,7 @@
         </button>
       </div>
       <div class="govuk-grid-column-one-third">
-        <p class="govuk-heading-m">Total Leavers: {{ totalLeavers }}</p>
+        <p class="govuk-heading-m">Total leavers: {{ totalLeavers }}</p>
       </div>
     </div>
 
