feat(workplaceDetailsCompletionBanner): Removed underline from compeletion button

--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -8,7 +8,13 @@
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
         <p>Check the workplace details you've added before you confirm them.</p>
-        <a class="govuk-button" role="button" draggable="false" (click)="showConfirmWorkplaceDetailsAlert($event)">
+        <a
+          class="govuk-button"
+          role="button"
+          draggable="false"
+          (click)="showConfirmWorkplaceDetailsAlert($event)"
+          style="text-decoration: none"
+        >
           Confirm workplace details
         </a>
       </div>
