feat(workplaceDetailsNewStartersUpdate): Make html text changes and set up spec file

--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -11,8 +11,8 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <h1 class="govuk-fieldset__heading">Add new starters in the last 12 months</h1>
-          <p class="govuk-hint">This should only be for permanent or temporary staff.</p>
+          <h1 class="govuk-fieldset__heading">Add your new starters from the last 12 months</h1>
+          <p class="govuk-hint">These should only be new starters who are permanent or temporary staff.</p>
         </legend>
       </div>
     </div>
@@ -95,7 +95,7 @@
         </button>
       </div>
       <div class="govuk-grid-column-one-third">
-        <p class="govuk-heading-m">Total: {{ totalStarters }}</p>
+        <p class="govuk-heading-m">Total new starters: {{ totalStarters }}</p>
       </div>
     </div>
 
